// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions addTodo 1`] = `
Object {
  "payload": "hello!",
  "type": "ADD_TODO",
}
`;

exports[`actions fetchTodos 1`] = `
Object {
  "type": "FETCH_TODOS",
}
`;

exports[`actions setAddedTodo 1`] = `
Object {
  "payload": "responseData",
  "type": "SET_ADDED_TODO",
}
`;

exports[`actions setAddedTodo 2`] = `
Object {
  "error": true,
  "payload": [Error: Boom!],
  "type": "SET_ADDED_TODO",
}
`;

exports[`actions setFetchedTodos 1`] = `
Object {
  "meta": Object {
    "filter": "filterName",
  },
  "payload": "responseData",
  "type": "SET_FETCHED_TODOS",
}
`;

exports[`actions setFetchedTodos 2`] = `
Object {
  "error": true,
  "meta": Object {
    "filter": "filterName",
  },
  "payload": [Error: Boom!],
  "type": "SET_FETCHED_TODOS",
}
`;

exports[`actions setToggleFetching 1`] = `
Object {
  "payload": "filterName",
  "type": "SET_TOGGLE_FETCHING",
}
`;

exports[`actions setToggleFetching 2`] = `
Object {
  "error": true,
  "payload": [Error: Boom!],
  "type": "SET_TOGGLE_FETCHING",
}
`;

exports[`actions setToggledTodo 1`] = `
Object {
  "payload": "responseData",
  "type": "SET_TOGGLED_TODO",
}
`;

exports[`actions setToggledTodo 2`] = `
Object {
  "error": true,
  "payload": [Error: Boom!],
  "type": "SET_TOGGLED_TODO",
}
`;

exports[`actions toggleTodo 1`] = `
Object {
  "payload": "123",
  "type": "TOGGLE_TODO",
}
`;
